--- a/CarShowroomBackEnd/CarShowroom.Infra.IoC/CarShowroom.Infra.IoC.csproj
+++ b/CarShowroomBackEnd/CarShowroom.Infra.IoC/CarShowroom.Infra.IoC.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.7" />
   </ItemGroup>
 
