--- a/CarShowroomBackEnd/CarShowroom.Infra.IoC/CarShowroom.Infra.IoC.csproj
+++ b/CarShowroomBackEnd/CarShowroom.Infra.IoC/CarShowroom.Infra.IoC.csproj
@@ -6,7 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="3.1.8" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.8" />
   </ItemGroup>
 
   <ItemGroup>
